Fix marketplace addon install state and indicators